Add filter data button to mobile navbar
resolves #5

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -92,6 +92,9 @@ body {
   .fixed-table-toolbar {
     display: none;
   }
+  .fixed-table-container {
+    padding-bottom: 15px !important;
+  }
 }
 @media print {
   .navbar {
